# mpv-qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.qml  main.cpp  mpvobject.cpp  mpvobject.h
.github/workflows/: build-packages.yml
cmake/: fixup_macos_bundle.cmake
docs/: architecture.md  build.md
qml/: Main.qml
qml/components/: ControlButton.qml  PlaybackControlsBar.qml  PlaybackProgressBar.qml  PlaybackSpeedSelector.qml  QualitySelector.qml  SubtitleSelector.qml  VolumeSelector.qml
qml/utils/: PlayerFormat.js
scripts/: build-macos.sh  build-msys2.sh  package-appimage.sh  package-windows.sh
src/app/: main.cpp  playerwindow.cpp  playerwindow.h
src/common/: qthelper.hpp
src/player/: mpvobject.cpp  mpvobject.h  mpvplayersession.cpp  mpvplayersession.h  mpvplayerview.cpp  mpvplayerview.h  mpvwindowrenderer.cpp  mpvwindowrenderer.h  videoplayerview.cpp  videoplayerview.h
